--- a/src/css/Products.css
+++ b/src/css/Products.css
@@ -8,10 +8,11 @@
   background-color: white;
   z-index: 1;
   width: 100%;
-  align-items: center;
+  margin-bottom: 15px;
 }
 .product__rating {
   display: flex;
+  margin-left: 10px;
 }
 
 .product > img {
@@ -23,6 +24,11 @@
 
 .product__info {
   margin-bottom: 15px;
+  flex-wrap: nowrap; /* default value; can be omitted */
+  justify-content: start;
+}
+.product__info > p {
+  margin-left: 10px;
 }
 
 .product > button {
